--- a/stories/no/0120_hår_slides.html
+++ b/stories/no/0120_hår_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>아난시와 지혜 - Global African Storybook</title>
+  <title>Hår - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="아난시와-지혜" class="slide level1">
-<h1>아난시와 지혜</h1>
+<section id="hår" class="slide level1">
+<h1>Hår</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
-<p>옛날 옛날에, 사람들은 아무것도 몰랐어요. 어떻게 곡식을 심는지, 어떻게 천을 짜는지, 또는 어떻게 철기 도구를 만드는지 몰랐어요. 하늘에 있던 신 느야메가 모든 지혜를 가지고 있었어요. 그는 지혜를 점토 항아리 안에 안전하게 두었어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/02.jpg" /></p>
+<p>Thuli har kort hår.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
-<p>어느 날, 느야메는 지혜의 항아리를 아난시에게 주기로 결정했어요. 아난시는 점토 항아리를 볼 때 마다 무언가 새로운 것을 배웠어요. 정말 신났어요!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/03.jpg" /></p>
+<p>Anna har langt hår.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>욕심쟁이 아난시가 생각했어요, &quot;항아리를 높은 나무 위에 두어야지. 그러면 내가 모두 가지고 있을 수 있어!&quot; 그는 긴 실을 짜서 점토 항아리에 두르고, 배에 묶었어요. 그는 나무를 오르기 시작했어요. 그러나 항아리가 무릎에 계속 부딛히느라 나무를 오르기가 힘들었어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/04.jpg" /></p>
+<p>Cathy har det lengste håret.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>아난시의 어린 아들이 나무 밑에서 항상 지켜보고 있었어요. 그는 &quot;항아리를 등에 묶으면 오르기 더 쉽지 않을까요?&quot; 라고 말했어요. 아난시는 지혜로 가득 찬 항아리를 등에 묶었고, 정말 훨씬 쉬웠어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/05.jpg" /></p>
+<p>Zama har flettet håret sitt.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>그는 금새 나무 꼭대기에 이르렀어요. 그러나 그는 멈추고 생각하길, &quot;내가 모든 지혜를 가지고 있어야 하는데, 내 아들이 나보다 똑똑하잖아!&quot; 아난시는 정말 화가 난 나머지 점토 항아리를 나무 밑으로 던져 버렸어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/06.jpg" /></p>
+<p>Baba har skjegg.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
-<p>항아리는 산산조각 났어요. 지혜는 모든 사람들에게 자유롭게 나누어질 수 있게 되었어요. 그렇게 사람들은 어떻게 농사를 짓고, 천을 짜고, 철기 도구를 만들고, 다른 모든 것들을 배울 수 있었어요.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
+<p>Zanele har gredd håret sitt.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,18 +150,36 @@
 </section>
 <section class="slide level1">
 
-<h2 id="아난시와-지혜-1">아난시와 지혜</h2>
-<strong>Text:</strong> Ghanaian folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Jong Yong Park<br> <strong>Language:</strong> Korean<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/08.jpg" /></p>
+<p>Thabo har klippet håret sitt.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
+<p>Themba har barbert bort håret sitt.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="hår-1">Hår</h2>
+<strong>Tekst:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrasjoner:</strong> Bronwen Heath<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/anansi-and-wisdom'>here</a>
+Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/hair'>her</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
