--- a/stories/ar/0001_الرجل-ذو-القامة-الطويلة_slides.html
+++ b/stories/ar/0001_الرجل-ذو-القامة-الطويلة_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>كان معوله قصيراً جداً</p>
+<p>كان معوله قصيرا جدا</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>ومدخل منزله منخفض جداً</p>
+<p>ومدخل منزله منخفض جدا</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>كان فراشه قصيراً جداً</p>
+<p>كان فراشه قصيرا جدا</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>إنه لرجل طويل جداً</p>
+<p>إنه لرجل طويل جدا</p>
 <center>
 <strong>5</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>ًكما قام بصناعة فراش طويل جدا</p>
+<p>كما قام بصناعة فراش طويل جدا</p>
 <center>
 <strong>8</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>الرجل الطويل ترك منزله وذهب للعيش في غابة كبيرة حيث أمضى سنيناً عديدة من عمره هناك</p>
+<p>الرجل الطويل ترك منزله وذهب للعيش في غابة كبيرة حيث أمضى سنينا عديدة من عمره هناك</p>
 <center>
 <strong>11</strong>
 </center>
