--- a/stories/ar/0006_أنانسي-و-الحكمة_slides.html
+++ b/stories/ar/0006_أنانسي-و-الحكمة_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
-<p>في قديم الزمان، كان الناس لا يعرفون شيئاً. كانوا لا يعرفون طريقة زراعة المحاصيل، أو نسج الأقمشة، أو صناعة الأدوات الحديدية. كان هناك الإله نيام في السماء وكان يملك كل الحكمة الموجودة في العالم. و كان محتفظاً بها في وعاء من الفخار.</p>
+<p>في قديم الزمان، كان الناس لا يعرفون شيئا. كانوا لا يعرفون طريقة زراعة المحاصيل، أو نسج الأقمشة، أو صناعة الأدوات الحديدية. كان هناك الإله نيام في السماء وكان يملك كل الحكمة الموجودة في العالم. و كان محتفظا بها في وعاء من الفخار.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
-<p>في يوم من الأيام، قرر نيام أن يعطي وعاء الحكمة إلى أنانسي. في كل مرة كان أنانسي ينظر في وعاء الفخار، كان يتعلم شيئاً جديداً. كان أمراً مثيراً!</p>
+<p>في يوم من الأيام، قرر نيام أن يعطي وعاء الحكمة إلى أنانسي. في كل مرة كان أنانسي ينظر في وعاء الفخار، كان يتعلم شيئا جديدا. كان أمرا مثيرا!</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>خلال كل هذا الوقت كان ابن أنانسي الصغير يشاهد من أسفل الشجرة. وقال: &quot;ألن يكون من الأسهل تسلق الشجرة إذا كان الوعاء مربوطاً إلى ظهرك بدلا من بطنك؟&quot; حاول أنانسي ربط وعاء الفخار المليء بالحكمة إلى ظهره، و أصبح فعلاً تسلق الشجرة أسهل.</p>
+<p>خلال كل هذا الوقت كان ابن أنانسي الصغير يشاهد من أسفل الشجرة. وقال: &quot;ألن يكون من الأسهل تسلق الشجرة إذا كان الوعاء مربوطا إلى ظهرك بدلا من بطنك؟&quot; حاول أنانسي ربط وعاء الفخار المليء بالحكمة إلى ظهره، و أصبح فعلا تسلق الشجرة أسهل.</p>
 <center>
 <strong>4</strong>
 </center>
