--- a/stories/ar/0141_-الدجاجة-والدودة-.html
+++ b/stories/ar/0141_-الدجاجة-والدودة-.html
@@ -56,7 +56,7 @@ Winny Asara<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
 
-<p>ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيداً، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
+<p>ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيدا، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Winny Asara<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
 
-<p>كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعاً وابتلعت الدودة.</p>
+<p>كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعا وابتلعت الدودة.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -112,14 +112,14 @@ Winny Asara<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
 
-<p>تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيراً للاشمئزاز!</p>
+<p>تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيرا للاشمئزاز!</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
 
-<p>استمرت الدجاجة تسعل حتى سعلت الدودة خارجاً من بطنها. زحفت الدودة و والدتها  سريعا فوق شجرة للاختفاء.</p>
+<p>استمرت الدجاجة تسعل حتى سعلت الدودة خارجا من بطنها. زحفت الدودة و والدتها  سريعا فوق شجرة للاختفاء.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
