--- a/stories/ar/0156_التمساح-الجائع.html
+++ b/stories/ar/0156_التمساح-الجائع.html
@@ -70,7 +70,7 @@ Christian G.<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
 
-<p>لم يعد التمساح جائعاً بعد ذلك بل أصبح سعيداً</p>
+<p>لم يعد التمساح جائعا بعد ذلك بل أصبح سعيدا</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
