--- a/stories/ar/0156_التمساح-الجائع_slides.html
+++ b/stories/ar/0156_التمساح-الجائع_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>لم يعد التمساح جائعاً بعد ذلك بل أصبح سعيداً</p>
+<p>لم يعد التمساح جائعا بعد ذلك بل أصبح سعيدا</p>
 <center>
 <strong>4</strong>
 </center>
