--- a/stories/ar/0158_الدجاجة-والنسر.html
+++ b/stories/ar/0158_الدجاجة-والنسر.html
@@ -56,7 +56,7 @@ Ann Nduku<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
 
-<p>في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيداً جداً للعثور على طعام. و كان يعود متعباً جداً. فقال النسر “يجب أن يكون هناك وسيلة أسهل للسفر!”.</p>
+<p>في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر “يجب أن يكون هناك وسيلة أسهل للسفر!”.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,14 +70,14 @@ Ann Nduku<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
 
-<p>كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولاً. و صنع لنفسه زوجاً جميلاً من الأجنحة وطار عالياً فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p>كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
 
-<p>عندما رأت الطيور الأخرى النسر يطير بعيداً. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضاً. بعد ذلك a9b7t هناك طيور تحلق في السماء.</p>
+<p>عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك a9b7t هناك طيور تحلق في السماء.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Ann Nduku<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
 
-<p>عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعاً و أختطف أحد أطفال الدجاجة وحمله بعيداً. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p>عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
