--- a/stories/ar/0324_يوم تركت المنزل ذاهبا إلي المدينة_slides.html
+++ b/stories/ar/0324_يوم تركت المنزل ذاهبا إلي المدينة_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>يوم تركت المنزل ذاهبا إلي المدينة - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1>الدجاجة والنسر</h1>
+<section id="يوم-تركت-المنزل-ذاهبا-إلي-المدينة" class="slide level1">
+<h1>يوم تركت المنزل ذاهبا إلي المدينة</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p>في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
+<p>كانت محطة القرية مزدحمة بالناس و الحافلات المكدسة بالركاب. علي الرصيف، إنتظر عدد أكبر من الركاب. كان السائقون ينادون علي مقاصدهم</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
+<p>سمعت احد المنادين يصرخ: &quot;المدينة! المدينة! متجهين الي الغرب!&quot; هذه كانت الحافلة التي احتاجها.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
+<p>كانت الحافلة قد اشرفت علي الاكتمال و لا تزال الركاب تتدافع للصعود اليها. بعض الركاب تركوا أمتعتهم في المكان المخصص لها بباطن الحافلة بينما اكتفي البعض الأخر بوضعها علي الأرفف بالداخل.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p>كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
+<p>امضي الركاب يبحثون عن مقاعد خالية وسط الزحام، وهم ممسكين بتذاكرههم. و ظلت الأمهات تداعب صغارها طوال الرحلة الطويلة.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك a9b7t هناك طيور تحلق في السماء.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
+<p>تقلصت انا بجانب احد النوافذ. كان يجلس بجانبي رجلا يحتضن حقيبة خضراء. كان الرجل يرتدي خفا و معطفا رثا، و قد بدي عليه القلق.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p>عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
+<p>همت بنظري خارج الحافلة و أدركت أنني أترك قريتي، المكان الذي نشأت فيه. كنت ذاهبا إلي المدينة الكبيرة.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p>في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
+<p>اكتملت الحافلة و بات جميع الركاب جالسين في مقاعدهم. ظل الباعة الجائلين يسعون داخل الحافلة لبيع بضائعهم للركاب. كان كلا منهم ينادي بما يعرض للبيع. كانت كلماتهم تضحكني.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
+<p>بعض الركاب اشتري مأكولات و امضو يأكلونها، بينما فضل قيلل منهم المشروبات. و من لكم يكن يملك نقود مثلي إكتفي بالمشاهدة.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p>عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
+<p>قاطع صفير الحافلة كل هذه الأحداث ليشير أننا جاهزين للتحرك. صار السائق يصرخ في الباعة الجائلين ليتركوا الحافلة.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
+<p>تسارع الباعة الجائلين خارج الحافلة. بعضهم أعاد باقي النقود للركاب، و بعضهم قام بمحاولة أخيرة لبيع المزيد من الأغراض.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,66 @@
 </section>
 <section class="slide level1">
 
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
+<p>إنطلقت الحافلة و نظرت أنا خارج النافذة. همت في إن كنت سأعود إلي قريتي يوما ما.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
+<p>بينما الحافلة قطعت الحافلة طريقها نحو المدينة، اصبح المناخ حار جدا. أغمضت عيناي و أنا آمل أن أنام.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
+<p>ظل ذهني يجذبني للمنزل. هل ستكون أمي في أمان؟ هل ستجلب أرانبي مالا؟ هل سيتذكر اخي أن يسقي أشجاري؟</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
+<p>في الطريق تذكرت أين يقطن عمي في المدينة الكبيرة. ظللت اردده حتي خلدت للنوم.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
+<p>بعد تسع ساعات، إستيقذت إلي قرع صاخب و صراخ المنادي علي الركاب العائدين إلي القرية. إنتزعت حقيبتي و أسرعت خارج الحافلة.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
+<p>كانت الحافلة تمتلئ بسرعة. قريبا ستشق طريقها عائدة إلي الشرق. بالنسبة إلي كان أهم شئ أن أبحث عن عمي.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="يوم-تركت-المنزل-ذاهبا-إلي-المدينة-1">يوم تركت المنزل ذاهبا إلي المدينة</h2>
+<strong>Text:</strong> Lesley Koyi, Ursula Nafula<br> <strong>Illustrations:</strong> Brian Wambi<br> <strong>Translation:</strong> Maged Hassan<br> <strong>Language:</strong> Arabic<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/day-i-left-home-city'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
