--- a/stories/index.html
+++ b/stories/index.html
@@ -272,7 +272,7 @@
     </tr>
     <tr>
       <td>0324</td>
-      <td><a href="/stories/ar/0324_يوم-تركت-المنزل-ذاهباً-إلي-المدينة-_slides.html" target="_blank">يوم تركت المنزل ذاهباً إلي المدينة</a></td>
+      <td><a href="/stories/ar/0324_يوم تركت المنزل ذاهبا إلي المدينة_slides.html" target="_blank">يوم تركت المنزل ذاهبا إلي المدينة</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ar0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -1870,6 +1870,18 @@
       <td><a name="ko0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0243</td>
+      <td><a href="/stories/ko/0243_할머니와-함께하는-휴가_slides.html" target="_blank">할머니와 함께하는 휴가</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0262</td>
+      <td><a href="/stories/ko/0262_마고즈위_slides.html" target="_blank">마고즈위</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="/stories/ko/0271_둘_slides.html" target="_blank">둘</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1910,6 +1922,12 @@
       <td><a href="/stories/ko/0324_집으로부터-도시로-떠난-날_slides.html" target="_blank">집으로부터 도시로 떠난 날</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ko0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0327</td>
+      <td><a href="/stories/ko/0327_동물을-세다_slides.html" target="_blank">동물을 세다</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTnhaMXR3elNkc2c"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ko0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0337</td>
@@ -3563,7 +3581,7 @@
       <td>0243</td>
       <td><a href="http://my.africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
@@ -3581,7 +3599,7 @@
       <td>0262</td>
       <td><a href="http://my.africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#pa0262">pa</a>, <a href="#tl0262">tl</a>, <a href="#zh0262">zh</a></td>
+      <td><a href="#ko0262">ko</a>, <a href="#pa0262">pa</a>, <a href="#tl0262">tl</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
@@ -3695,7 +3713,7 @@
       <td>0327</td>
       <td><a href="http://my.africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#no0327">no</a>, <a href="#tl0327">tl</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#tl0327">tl</a></td>
     </tr>
     <tr>
       <td>0331</td>
