--- a/stories/no/0234_fotballhelten-andiswa_slides.html
+++ b/stories/no/0234_fotballhelten-andiswa_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="fotballhelten-andiswa-1">Fotballhelten Andiswa</h2>
-<strong>Tekst:</strong> Eden Daniels<br> <strong>Illustrasjoner:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<strong>Tekst:</strong> Eden Daniels<br> <strong>Illustrasjoner:</strong> Eden Daniels<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
 Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
