--- a/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ_slides.html
+++ b/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="ਐਨਡਸਵ-ਫਟਬਲ-ਸਟਰ-1">ਐਂਨਡਿਸਵਾ ਫੁੱਟਬਾਲ ਸਟਾਰ</h2>
-<strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
+<strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
