--- a/stories/ar/0006_أنانسي-و-الحكمة.html
+++ b/stories/ar/0006_أنانسي-و-الحكمة.html
@@ -49,14 +49,14 @@ Ghanaian folktale<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
 
-<p>في قديم الزمان، كان الناس لا يعرفون شيئاً. كانوا لا يعرفون طريقة زراعة المحاصيل، أو نسج الأقمشة، أو صناعة الأدوات الحديدية. كان هناك الإله نيام في السماء وكان يملك كل الحكمة الموجودة في العالم. و كان محتفظاً بها في وعاء من الفخار.</p>
+<p>في قديم الزمان، كان الناس لا يعرفون شيئا. كانوا لا يعرفون طريقة زراعة المحاصيل، أو نسج الأقمشة، أو صناعة الأدوات الحديدية. كان هناك الإله نيام في السماء وكان يملك كل الحكمة الموجودة في العالم. و كان محتفظا بها في وعاء من الفخار.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p>في يوم من الأيام، قرر نيام أن يعطي وعاء الحكمة إلى أنانسي. في كل مرة كان أنانسي ينظر في وعاء الفخار، كان يتعلم شيئاً جديداً. كان أمراً مثيراً!</p>
+<p>في يوم من الأيام، قرر نيام أن يعطي وعاء الحكمة إلى أنانسي. في كل مرة كان أنانسي ينظر في وعاء الفخار، كان يتعلم شيئا جديدا. كان أمرا مثيرا!</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Ghanaian folktale<br>العربية</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
-<p>خلال كل هذا الوقت كان ابن أنانسي الصغير يشاهد من أسفل الشجرة. وقال: “ألن يكون من الأسهل تسلق الشجرة إذا كان الوعاء مربوطاً إلى ظهرك بدلا من بطنك؟” حاول أنانسي ربط وعاء الفخار المليء بالحكمة إلى ظهره، و أصبح فعلاً تسلق الشجرة أسهل.</p>
+<p>خلال كل هذا الوقت كان ابن أنانسي الصغير يشاهد من أسفل الشجرة. وقال: “ألن يكون من الأسهل تسلق الشجرة إذا كان الوعاء مربوطا إلى ظهرك بدلا من بطنك؟” حاول أنانسي ربط وعاء الفخار المليء بالحكمة إلى ظهره، و أصبح فعلا تسلق الشجرة أسهل.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
