--- a/stories/ar/0141_-الدجاجة-والدودة-_slides.html
+++ b/stories/ar/0141_-الدجاجة-والدودة-_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
-<p>ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيداً، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
+<p>ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيدا، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
-<p>كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعاً وابتلعت الدودة.</p>
+<p>كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعا وابتلعت الدودة.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
-<p>تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيراً للاشمئزاز!</p>
+<p>تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيرا للاشمئزاز!</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
-<p>استمرت الدجاجة تسعل حتى سعلت الدودة خارجاً من بطنها. زحفت الدودة و والدتها سريعا فوق شجرة للاختفاء.</p>
+<p>استمرت الدجاجة تسعل حتى سعلت الدودة خارجا من بطنها. زحفت الدودة و والدتها سريعا فوق شجرة للاختفاء.</p>
 <center>
 <strong>11</strong>
 </center>
