--- a/stories/ko/0234_축구-스타-안디스와-_slides.html
+++ b/stories/ko/0234_축구-스타-안디스와-_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="축구-스타-안디스와-1">축구 스타 안디스와</h2>
-<strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br> <strong>Translation:</strong> Jong Yong Park<br> <strong>Language:</strong> Korean<br>
+<strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels<br> <strong>Translation:</strong> Jong Yong Park<br> <strong>Language:</strong> Korean<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
