--- a/stories/ko/0243_할머니와-함께하는-휴가_slides.html
+++ b/stories/ko/0243_할머니와-함께하는-휴가_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>할머니와 함께하는 휴가 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1>الدجاجة والنسر</h1>
+<section id="할머니와-함께하는-휴가" class="slide level1">
+<h1>할머니와 함께하는 휴가</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p>في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
+<p>오돈고와 아피요는 아빠와 도시에 살았습니다. 그들은 항상 휴가를 기대했습니다. 학교를 가지 않아도 되서만이 아니라 할머니를 뵈러 갈 수 있었기 때문입니다. 할머니께서는 큰 호수 옆에 낚시를 할 수 있는 마을에 사셨습니다.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
+<p>오돈고와 아피요는 너무 신났습니다 왜냐하면 또 할머니를 뵐 수 있었기 때문입니다. 그 전날 밤, 그들은 짐을 쌓고 할머니의 마을로 가는 긴여행을 위해 준비했습니다. 그날 밤 오돈고와 아피요는 다음날의 여행에 대해 얘기 하느라 잠도 자지 않았습니다.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
+<p>이른 다음날 아침에, 그들은 아빠의 자동차를 타고 할머니의 마을로 향했습니다. 그들은 산을 지나고, 야생 동물들을 지나고, 차 농장을 지났습니다. 그들은 자동차를 세고 노래를 불렀습니다.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p>كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
+<p>잠시 후 아이들은 피곤해서 잠이 들었습니다.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك a9b7t هناك طيور تحلق في السماء.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
+<p>아빠께서 마을에 도착할 때 쯤 오돈고와 아피요를 깨웠습니다. 그들은 나무아래에 매트위에 쉬시고 계시는 그들의 할머니,니야-칸야다를 만났습니다. 니야-칸야다는 루오뜻으로 '칸야다 사람들의 딸' 이라는 뜻이였습니다. 할머니께서는 강하고 아름다우셨습니다.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p>عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
+<p>니야-칸야다는 셋을 집으로 반갑게 환영하셨습니다. 그리고 그들 주변을 돌며 노래를 부르시며 춤을 추시며 즐겁게 해주셨습니다. 오돈고와 아피요는 그들이 도시에서 산 선물을 드리려는 마음에 들떠 있었습니다.오돈고는 외쳤습니다, &quot; 제 선물부터 열어보세요.&quot; 아피요도 외쳤습니다, &quot;아니, 제 선물부터 열어보세요!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p>في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
+<p>할머니께서는 선물을 열어보시고 전통적인 방식으로 그의 손녀들을 축복해주셨습니다.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
+<p>그리고 나서, 오돈고와 아피요는 밖에 나갔습니다. 그들은 나비와 새들을 쫓았습니다.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p>عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
+<p>그들은 나무를 오르고 호숫가에서 물놀이를 했습니다.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
+<p>날이 어두워질때쯤 그들은 저녁을 먹으러 집으로 향했습니다. 식사를 끝내기도 전에, 그들은 꾸벅꾸벅 졸기 시작했습니다.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,12 +186,102 @@
 </section>
 <section class="slide level1">
 
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
+<p>다음날, 아빠는 아이들을 니야-칸야다에게 맡기고 다시 도시로 향했습니다.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
+<p>오돈고와 아피요는 할머니의 집안일을 도와드렸습니다. 그들은 물을 기르고 장작을 모았습니다. 그들은 닭장에 가서 달걀을 가져오고 텃밭에서 풀을 뜯어 왔습니다.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
+<p>니야-칸야다는 그의 손녀들에게 스튜랑 같이 먹을 수 있는부드러운 우갈리를 만드는법을 가르쳐 주셨습니다. 그리고 생선구이와 같이 먹는 코코넛라이스를 만드는 법도 가르쳐 주셨습니다.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
+<p>어느 하루 아침, 오돈고는 할머니의 소들을 방목하러 나갔습니다. 그는 이웃의 농장을 지나치게 되었습니다. 그곳에 계신 농부께서는 오돈고에게 화가 많이 나있으셨습니다. 농부의 곡식을 먹는 소들을 보고 그는 오돈고에게 협박을 했습니다. 오돈고의 소들이 그의 곡식을 먹으면, 소들을 가지고 갈 것이라고 하셨습니다. 그날 이후로, 오돈고는 소들 관리를 더 철저히 했습니다.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
+<p>어느 다른날에는, 아이들이 니야-칸야다와 시장을 갔습니다. 할머니께서는 채소, 설탕 그리고 비누를 파는 공간이 있었습니다. 아피요는 손님들에게 물건값을 말해주는걸 즐겨했습니다. 오돈고는 옆에서 손님께서 구매하신 선물을 포장을 했습니다.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
+<p>하루를 다 마치고나서 그들은 다같이 차이 티를 마셨습니다. 그리고 오돈고와 아피요는 할머니께서 버신 돈을 세는것을 도와드렸습니다.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
+<p>그러나 휴가는 잠깐이였을뿐 다시 도시로 아이들은 돌아가야 했습니다. 니야-칸야다는 오돈고에겐 모자를 주시고 아피요에겐 스웨터를 주셨습니다. 그리고 그들의 여행을 위한 음식들도 넉넉히 채워주셨습니다.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
+<p>아버지께서 그들을 데릴러 오셨을때, 그들은 떠나기 싫었습니다. 아이들은 니야-칸야다에게 도시로 같이 가자고 애원했습니다. 그는 웃으며 말씀하셨습니다, &quot;나는 도시에서 살기엔 너무 늙었어. 너네들이 다시 마을로 찾아 올기를 기다릴게.&quot;</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
+<p>오돈고와 아피요는 할머니를 꽉 안았습니다 그리고 작별 인사를 나눴습니다.</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
+<p>오돈고와 아피요가 학교를 다시 가던날, 그들은 친구들에게 할머니의 마을에 관해 얘기해주었습니다. 어떤 아이들은 도시의 삶이 좋다 생각 했습니다. 다른 아이들은 마을에서의 삶이 더 좋다고 생각했습니다. 하지만, 제일 중요한것은, 오돈고와 아피요는 훌륭한 할머니께서 계신다는것에 친구 모두가 동의 했다는 사실입니다!</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="할머니와-함께하는-휴가-1">할머니와 함께하는 휴가</h2>
+<strong>Text:</strong> Violet Otieno<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Scarlet Kim (김새봄)<br> <strong>Language:</strong> Korean<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/holidays-grandmother'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
