--- a/stories/ko/0327_동물을-세다_slides.html
+++ b/stories/ko/0327_동물을-세다_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>الدجاجة والنسر - Global African Storybook</title>
+  <title>동물을 세다 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="الدجاجة-والنسر" class="slide level1">
-<h1>الدجاجة والنسر</h1>
+<section id="동물을-세다" class="slide level1">
+<h1>동물을 세다</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p>في قديم الزمان، كانت الدجاجة والنسر أصدقاء. كانوا يعيشون في سلام مع جميع الطيور الأخرى. كان لا يستطيع أيا منهما الطيران.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
+<p>한마리의 코끼리가 물을 마실것이다.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>في يوم من الأيام، كان هناك مجاعة في الأرض. كان على النسر السير بعيدا جدا للعثور على طعام. و كان يعود متعبا جدا. فقال النسر &quot;يجب أن يكون هناك وسيلة أسهل للسفر!&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
+<p>두마리의 기린이 물을 마실것이다.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>بعد ليلة من النوم الجيد، فكرت الدجاجة بفكرة رائعة. بدأت بجمع الريش الذي تساقط من جميع أصدقائهم الطيور. و قالت &quot; لنقم بخياطة هذا الريش فوق الريش الخاص بنا، لعل هذا سيجعل السفر أسهل&quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
+<p>세마리의 버펄로와 네마리의 새들이 물을 마실것이다.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p>كان النسر هو الوحيد في القرية الذي يملك إبرة، فبدأت بالخياطة أولا. و صنع لنفسه زوجا جميلا من الأجنحة وطار عاليا فوق الدجاجة. اقترضت الدجاجة الإبرة لكنها سرعان ما تعبت من الخياطة. تركت الإبرة على الدولاب وذهبت إلى المطبخ لإعداد الطعام لأطفالها.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
+<p>다섯마리의 임팔라와 여섯마리의 멧돼지들이 물을 마시러 가고 있다.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>عندما رأت الطيور الأخرى النسر يطير بعيدا. طلبوا من الدجاجة أن تعيرهم الإبرة لصناعة أجنحة لأنفسهم أيضا. بعد ذلك a9b7t هناك طيور تحلق في السماء.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/06.jpg" /></p>
+<p>일곱마리의 얼룩말들은 물을 마시러 달려가고 있다.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p>عندما أعاد آخر طائر الإبرة المقترضة، لم تكن هناك الدجاجة. فأخذ أطفال الدجاجة الإبرة و بدأوا في اللعب بها. عندما سئموا من اللعبة، تركوا الإبرة في الرمال.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
+<p>여덟마리의 개구리와 아홉마리의 물고기들이 물안에서 헤엄치고 있다.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p>في وقت لاحق بعد ظهر ذلك اليوم، عاد النسر. وسأل عن الإبرة لإصلاح بعض الريش الذي تفكك خلال رحلته. بحثت الدجاجة عن الإبرة على الدولاب. و بحثت في المطبخ. و بحثت في الفناء. ولكنها لم تعثر على أي أثر للإبرة.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
+<p>한마리의 사자가 으르렁거린다. 사자도 물을 마시고 싶어한다. 누가 사자를 두려워 하는가?</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>&quot;توسلت الدجاجة النسر: &quot;فقط أمهلني يوم واحد، ثم سيمكنك إصلاح جناحك و الطيران بعيدا للحصول على الطعام مرة أخرى&quot;. قال النصر &quot;إذا لم تتمكني من العثور على إبرة، ستعطيني أحد أطفالك كثمن للإبرة &quot;.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
+<p>한마리의 코끼리가 사자와 물을 마신다.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,30 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p>عندما جاء النسر في اليوم التالي، وجد الدجاجة تبحث في الرمال، ولكن لا أثر للإبرة. فطار النسر إلى أسفل سريعا و أختطف أحد أطفال الدجاجة وحمله بعيدا. بعد ذلك، كان كلما يظهر النسر، يجد الدجاجة تبحث في الرمال عن الإبرة.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>كان كلما يظهر ظل جناح النسر على الأرض، تحذر الدجاجة فراخها. &quot;اخرجوا من الأرض الجرداء فليس فيها مخبأ.&quot; و كانت الفراخ تجيبها: &quot;طبعا سوف نقوم بالهرب، لسنا أغبياء&quot;.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="الدجاجة-والنسر-1">الدجاجة والنسر</h2>
-<strong>Text:</strong> Ann Nduku<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
+<h2 id="동물을-세다-1">동물을 세다</h2>
+<strong>Text:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>Illustrations:</strong> Rob Owen<br> <strong>Translation:</strong> Scarlet Kim (김새봄)<br> <strong>Language:</strong> Korean<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/hen-and-eagle'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/counting-animals'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
