--- a/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ.html
+++ b/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ.html
@@ -104,7 +104,7 @@ Eden Daniels<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Eden Daniels<br /><strong>Illustrations:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br /><strong>Translation:</strong> Anu Gill<br /><strong>Language:</strong> Punjabi</p>
+<p><strong>Text:</strong> Eden Daniels<br /><strong>Illustrations:</strong> Eden Daniels<br /><strong>Translation:</strong> Anu Gill<br /><strong>Language:</strong> Punjabi</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
