--- a/stories/tl/0234_andiswa-soccer-bida_slides.html
+++ b/stories/tl/0234_andiswa-soccer-bida_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="andiswa-soccer-bida-1">Andiswa, Soccer Bida</h2>
-<strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
+<strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
